--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 toefl_ios/toefl_ios/audio/*
 toefl_ios/toefl_ios/Model/toefl_word_l.sqlite
+toefl_ios/toefl_ios.xcworkspace/xcuserdata/wim.xcuserdatad/*
